$Id$

2008-10-30 David Heremans <david.heremans@gnu-linux.net>
	* Added indication of used bits in ARG register

2008-10-29 David Heremans <david.heremans@gnu-linux.net>
	* First steps towards VDP Command registers dialog.

2008-10-22 David Heremans <david.heremans@gnu-linux.net>
	* More (V9958) registers explained
	* Started to correctly differentiate between TMS99x8,V9938 and V9958
	  in decoding table addresses and function of some bits.

2008-10-17 David Heremans <david.heremans@gnu-linux.net>
	* Added the SimpleHexRequest and SimpleHexRequestUser:
	  An attempt to simplify the request of openMSX debugable data

2008-10-13 David Heremans <david.heremans@gnu-linux.net>
	* Check if this it is {physical VRAM} vs the older {VRAM}
	* More registerViewer code

2008-10-13 Edwin Velds <e.velds@gmail.com>
	* Small fix in usage of qWarning.
	* Fixed ChangeLog dates.

2008-10-12 David Heremans <david.heremans@gnu-linux.net>
	* More WIP: some more pixel based fun in the bitmapped
	  vram viewer

2008-10-08 David Heremans <david.heremans@gnu-linux.net>
	* Added WIP:
	   - A bitmapped vram viewer
	   - The VDP status registers explained
	   - The regular VDP registers explained
	  The first two are already functional, but still need some minor
	  refinements, the last one is only a ui and some helper class at
	  the moment.

2008-09-15 David Heremans <david.heremans@gnu-linux.net>
	* Added visual indication to show focus on HexViewer widget.
	* More special keys handling.
	* All debuggable views are now editable.A single value OR a
	  chain of characters depending on where you click.

2008-09-14 David Heremans <david.heremans@gnu-linux.net>
	* HexViewer now correctly writes new values to the originatin
	  debugable.

2008-09-13 David Heremans <david.heremans@gnu-linux.net>
	* More mousesupport in HexViewer
	* Differentiate between data- vs charbased input.
	  And of course visual indication for this feature.

2008-09-12 David Heremans <david.heremans@gnu-linux.net>