@@ -1,5 +1,12 @@
 $Id$
 
+2009-05-09 David Heremans <david.heremans@gnu-linux.net>
+	* Added support for symbol files generated by SJASM
+
+2008-11-01 David Heremans <david.heremans@gnu-linux.net>
+	* Launching of command possible.
+	* Indication of used registers for given command.
+
 2008-10-30 David Heremans <david.heremans@gnu-linux.net>
 	* Added indication of used bits in ARG register
 
